fix: fix modal z-index

--- a/client/src/sass/base/_modal.scss
+++ b/client/src/sass/base/_modal.scss
@@ -28,7 +28,7 @@
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(3px);
   opacity: 0;
